projects/compiler/test/parser/invocation_error_typeargs_no_lparen.out
Error at %FILE_NAME%:1:11
Unexpected token '+', expected '(':
  |  foo<A, B> + 1
               ^